<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/u">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q1"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/radioButton"
            android:layout_height="wrap_content"
            android:text="@string/o11"
            android:textColor="#ffffff"
            android:onClick="onRadioButtonClicked"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o12"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/radioButton2"
            android:textColor="#ffffff"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:textSize="15dp"
            android:onClick="onRadioButtonClicked"
            android:id="@+id/radioButton3"
            android:layout_height="wrap_content"
            android:text="@string/o13"
            android:textColor="#ffffff"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q2"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o21"
            android:id="@+id/radioButton4"
            android:onClick="onRadioButtonClicked2"
            android:textColor="#ffffff"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o22"
            android:onClick="onRadioButtonClicked2"
            android:id="@+id/radioButton5"
            android:textColor="#ffffff"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:textSize="15dp"
            android:onClick="onRadioButtonClicked2"
            android:id="@+id/radioButton6"
            android:layout_height="wrap_content"
            android:text="@string/o23"
            android:textColor="#ffffff"/>
        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q3"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o31"
            android:id="@+id/radioButton7"
            android:textColor="#ffffff"
            android:onClick="onRadioButtonClicked3"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o32"
            android:onClick="onRadioButtonClicked3"
            android:id="@+id/radioButton8"
            android:textColor="#ffffff"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:onClick="onRadioButtonClicked3"
            android:textSize="15dp"
            android:id="@+id/radioButton9"
            android:layout_height="wrap_content"
            android:text="@string/o33"
            android:textColor="#ffffff"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q4"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o41"
            android:id="@+id/radioButton10"
            android:textColor="#ffffff"
            android:onClick="onRadioButtonClicked4"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o42"
            android:id="@+id/radioButton11"
            android:textColor="#ffffff"
            android:onClick="onRadioButtonClicked4"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:textSize="15dp"
            android:id="@+id/radioButton12"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked4"
            android:text="@string/o43"
            android:textColor="#ffffff"/>
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/q5"
            android:textColor="#ffffff"
            android:textSize="20dp"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o51"
            android:id="@+id/radioButton13"
            android:onClick="onRadioButtonClicked5"
            android:textColor="#ffffff"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/o52"
            android:id="@+id/radioButton14"
            android:textColor="#ffffff"
            android:onClick="onRadioButtonClicked5"
            android:textSize="15dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:textSize="15dp"
            android:id="@+id/radioButton15"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked5"
            android:text="@string/o53"
            android:textColor="#ffffff"/>
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="SUBMIT"
            android:onClick="submit"
            android:textColor="#000000"
            android:layout_marginLeft="150dp"
            android:background="#303F9F"/>

    </LinearLayout>

</ScrollView>